--- a/src/main/resources/static/resources/css/index.css
+++ b/src/main/resources/static/resources/css/index.css
@@ -531,6 +531,11 @@ table tr.collapse {
 .form-select{
 	font-size: 1.1rem !important;
 }
+
+/* #countdown .countdown-text{ */
+/* 	background: rgb(0 0 0 / 20%) !important; */
+/* 	top: 140% !important; */
+/* } */
 /* .................................................................................................................. GENERAL FIN */
 
 /* .................................................................................................................. PAGINADOR INI */
