--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 <head th:fragment="head">
 	<meta charset="UTF-8">
 	<title>Aprovisionamiento de Plataformas de Streaming</title>
+	<link rel="shortcut icon" href="./resources/img/favicon_io/favicon.ico">
 	<!-- Style - CSS -->
 	<link rel="stylesheet" type="text/css" href="./resources/css/bootstrap-5.1.3/bootstrap.min.css"></link>
 	<link rel="stylesheet" type="text/css" href="./resources/css/bootstrap-5.1.3/bootstrap-datetimepicker.min.css"></link>
