--- a/src/main/resources/templates/dashboard/salud_sistema.html
+++ b/src/main/resources/templates/dashboard/salud_sistema.html
@@ -7,7 +7,7 @@
 	<meta charset="ISO-8859-1">
 	<title></title>
 </head>
-<body>
+<body onload="initTimer()">
 	<div th:replace="index :: menu"></div>
 	<div th:replace="index :: container"></div>
 
@@ -16,65 +16,75 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="card mb-4">
-						<div class="card-header pb-0">
+						<div class="card-header pb-0 position-relative">
 							<i class="fa-regular fa-rectangle-list card_header_icon text-primary"></i>
 							<h5 class="text-pr text-primary tncb s6">Salud del Sistema</h5>
+							<div id="countdown" class="d-flex align-items-center position-absolute top-50 start-50 translate-middle">
+								<button type="button" 
+									class="d-none btn btn-info d-flex align-items-center position-relative position-absolute top-50 start-50 translate-middle">
+									<i class="fa-solid fa-rotate cursor-pointer fs-4 text-white"></i>
+									<label class="countdown-text fs-5 text-white p-0 m-0 ms-2"></label>
+								</button>
+							</div>
 							<span class="text-date text-dark"></span>
 						</div>
 						<div class="card-body p-4">
 							<div class="row d-flex justify-content-center">
-								<div class="border box-info-st border-left border-left-success p-3 m-3 col-1 text-center">
+								<div th:classappend="${CLASE_VAL}" onclick="retrieveList('VAL')"
+									class="border box-info-st border-left p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">VALIDACI&Oacute;N</span>
-									<span class="text-xg font-weight-bold numeric">00</span>
+									<span class="text-xg font-weight-bold numeric" th:text="${VAL}"></span>
 								</div>
-								<div
-									class="border box-info-st border-left border-left-danger p-3 m-3 col-1 text-center">
+								<div th:classappend="${CLASE_GES}" onclick="retrieveList('GES')"
+									class="border box-info-st border-left  p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text-dark text">GESTI&Oacute;N</span>
-									<span class="text-xg font-weight-bold text-dark numeric">00</span>
+									<span class="text-xg font-weight-bold text-dark numeric" th:text="${GES}"></span>
 								</div>
-								<div
-									class="border box-info-st border-left border-left-success p-3 m-3 col-1 text-center">
-									<span class="text-xg font-weight-bold text">ACOMPANA</span>
-									<span class="text-xg font-weight-bold numeric">00</span>
+								<div th:classappend="${CLASE_ACO}"
+									class="border box-info-st border-left p-3 m-3 col-1 text-center">
+									<span class="text-xg font-weight-bold text">ACOMPA&Ntilde;A</span>
+									<span class="text-xg font-weight-bold numeric" th:text="${ACO}"></span>
 								</div>
-								<div
-									class="border box-info-st border-left border-left-warning p-3 m-3 col-1 text-center">
+								<div th:classappend="${CLASE_VIN}"
+									class="border box-info-st border-left  p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">VINCULACI&Oacute;N</span>
-									<span class="text-xg font-weight-bold numeric">00</span>
+									<span class="text-xg font-weight-bold numeric" th:text="${VIN}"></span>
 								</div>
-								<div
-									class="border box-info-st border-left border-left-success p-3 m-3 col-1 text-center">
+								<div th:classappend="${CLASE_TER}"
+									class="border box-info-st border-left p-3 m-3 col-1 text-center">
 									<span class="text-xg font-weight-bold text">T&Eacute;RMINO</span>
-									<span class="text-xg font-weight-bold numeric">00</span>
+									<span class="text-xg font-weight-bold numeric" th:text="${TER}"></span>
 								</div>
 							</div>
-							<p class="text-center text-danger fs-5">Detalle de la tabla de datos de Gesti&oacute;n pues reporta un aumento anormal de casos negativos que impactan los resultados.</p>
-							<hr class="hr-danger m-0"/>
-							<div class="table-responsive">
-								<table 
+
+							<div id="resultList" th:fragment="data" class="table-responsive">
+								<table th:if="${list.size() != 0}"
 									class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
 									<thead>
 										<tr>
 											<th width="5px"></th>
-											<th class="text-uppercase text-primary tncb s2 text-center">Folio Intercambio</th>
-											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Folio Solicitud</th>
+											<th class="text-uppercase text-primary tncb s2 text-center">Folio Solicitud</th>
+											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Tel&eacute;fono</th>
+											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Correo</th>
 											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Plataforma</th>
-											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Producto</th>
 											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Movimiento</th>
 											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Estatus</th>
-											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Motivo</th>
+											<th class="text-uppercase text-primary tncb s2 text-center ps-2">Etapa</th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:each="i, itr: ${#numbers.sequence(1, 5)}">
-											<td align="center"><span class="text-xg tnrr s1" th:text="${itr.count}"></span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">00203</span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">00633</span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">AMAZON</span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">AMABN</span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">Alta</span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">Pendiente</span></td>
-											<td align="center"><span class="text-xg tnrr s1 text-center">En espera de Consumo de G3</span></td>
+										<tr th:if="${list.size() == 0}">
+											<td colspan="8" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
+										</tr>
+										<tr th:if="${list.size() > 0 and etapa == 'VAL'}" th:each="o, itr: ${list}">
+											<td><span class="text-xg tnrr s1" th:text="${itr.count}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.folioSolicitud}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1 text-center" th:text="${o.telefono}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1 text-center" th:text="${o.correo}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1 text-center" th:text="${o.plataforma}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1 text-center" th:text="${o.movimiento}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1 text-center" th:text="${o.estatus}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1 text-center" th:text="${o.etapa}"></span></td>
 										</tr>
 									</tbody>
 								</table>
@@ -85,5 +95,51 @@
 			</div>
 		</div>
 	</main>
+	<script type="text/javascript" th:inline="javascript">
+		function retrieveList(etapa){
+			$('#resultList').load('/semafaro/'+etapa);
+		}
+
+		//var end = new Date('00/00/0000 9:30 AM');
+		const cuentaRegresiva = /*[[${timer}]]*/ null;
+		console.log('cuentaRegresiva :: '+cuentaRegresiva);
+		var end = new Date();
+		end.setMinutes(end.getMinutes() + cuentaRegresiva); //se le agrega 10 minutos 
+		var _second = 1000;
+		var _minute = _second * 60;
+		var _hour = _minute * 60;
+		var _day = _hour * 24;
+		var _timer;
+
+		function showRemaining() {
+			$("#countdown button").removeClass("d-none");
+		    var now = new Date();
+		    var distance = end - now;
+		    var timer_fin = 0;
+		    
+		    if (distance <= 0) {
+				timer_fin = 1;
+		        clearInterval(_timer);
+		        $("#countdown .countdown-text").html('EXPIRED');
+		        show.loading('show');
+		        window.location.reload();
+		        //return;
+		    }
+		    
+		    if(timer_fin == 0){
+			    var days = Math.floor(distance / _day);
+			    var hours = Math.floor((distance % _day) / _hour);
+			    var minutes = Math.floor((distance % _hour) / _minute);
+			    var seconds = Math.floor((distance % _minute) / _second);
+				$("#countdown .countdown-text").html('');
+			    $("#countdown .countdown-text").html(minutes + 'm:'+seconds + 's');
+			}
+
+		}
+
+		function initTimer(){
+			timer = setInterval(showRemaining, 1000);
+		}
+	</script>
 </body>
 </html>
