--- a/src/main/resources/templates/dashboard/solicitudes.html
+++ b/src/main/resources/templates/dashboard/solicitudes.html
@@ -18,47 +18,51 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Cat&aacute;logo de Productos</h5>
-							
-							<div class="btn-group" role="group" aria-label="Basic example">
-								<button type="button" class="btn btn-info m-0"
-									data-bs-toggle="modal" data-bs-target="#addModal">
-									+</button>
-							</div>
+							<h5 class="text-pr text-primary tncb s6">Visor de Solicitudes</h5>
 						</div>
 						<div class="card-body p-4">
 							<div class="table-responsive">
-								<table class="table align-items-center justify-content-center mb-0 table-striped table-bordered">
+								<table class="table align-items-center justify-content-center mb-0 table-striped table-bordered table-responsive">
 									<thead>
 										<tr>
-											<th width="5px"></th>
-											<th class="text-uppercase text-primary ps-2" width="50px"></th>
+											<th width="15px"></th>
+											<th class="text-uppercase text-primary ps-2">Cliente</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Usuario</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Canal de Venta</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Oficina Comercial</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Contrataci&oacute;n</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Plataforma</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Movimiento</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Etapa</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Estatus</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Orden de Servicio</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Id Transacci&oacute;n</th>
+											<th class="text-uppercase text-primary ps-2 text-center">Codigo Promocion</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr th:if="${list.size() == 0}">
-											<td colspan="7" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
+											<td colspan="12" align="center"><span class="tncb s3">- No se encontraron registros -</span></td>
 										</tr>
 										<tr th:if="${list.size() > 0}" th:each="o, itr: ${list}">
 											<td><span class="text-xg tnrr s1" th:text="${itr.count}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.telefono}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.nombre}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.correo}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.celular}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.canalVenta}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.oficinaComercial}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.usuarioReg}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.libDB2}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.idCliente}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.idContratacion}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.plataforma}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.itemProd}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.movimiento}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.ordenServicio}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.codigoPromo}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.idTransCanal}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.etapa}"></span></td>
-											<td><span class="text-xg tnrr s1" th:text="${o.estatus}"></span></td>
+											<td>
+												<span class="text-xg tnrr s1" th:text="${o.nombre}"></span><br />
+												<span class="text-xg tnrb s1" th:text="|id - ${o.idCliente}|"></span><br />
+												<span class="text-xg tnrr s1" th:text="${o.correo}"></span><br />
+												<span class="text-xg tnrr s1" style="color:#aa0000;" th:text="${o.telefono}"></span><br />
+											</td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.usuarioReg}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.canalVenta}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.oficinaComercial}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.idContratacion}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.plataforma}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.movimiento}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.etapa}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.estatus}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.ordenServicio}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.idTransCanal}"></span></td>
+											<td align="center"><span class="text-xg tnrr s1" th:text="${o.codigoPromo}"></span></td>
 										</tr>
 									</tbody>
 								</table>
