--- a/src/main/resources/templates/dashboard/cont_aprov.html
+++ b/src/main/resources/templates/dashboard/cont_aprov.html
@@ -23,15 +23,14 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Compatrativos de Ventas en
-								Servicios de Entretenimiento</h5>
+							<h5 class="text-pr text-primary tncb s6">Compatrativos de Ventas/Aprovisionamiento en Servicios de Entretenimiento</h5>
 						</div>
 						<div class="card-body p-4">
 							<!-- Chart code -->
 							<script th:inline="javascript">
 							    var dataBar = /*[[${dataBar}]]*/ null;
 							</script>
-							<script src="./resources/js/charts/charts.js"></script>
+							<script src="./resources/js/charts/charts-vtas-aprov.js"></script>
 
 							<!-- HTML -->
 							<div class="row">
@@ -76,20 +75,19 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Compatrativos de Ventas en
-								Servicios de Entretenimiento</h5>
+							<h5 class="text-pr text-primary tncb s6">Compatrativos de Ventas/Bajas en Servicios de Entretenimiento</h5>
 						</div>
 						<div class="card-body p-4">
 							<!-- Chart code -->
 							<script th:inline="javascript">
-							    var dataBar = /*[[${dataBar}]]*/ null;
+								var dataBar = /*[[${dataBar}]]*/ null;
 							</script>
-							<script src="./resources/js/charts/charts.js"></script>
+							<script src="./resources/js/charts/charts-vtas-bajas.js"></script>
 
 							<!-- HTML -->
 							<div class="row">
 								<div class="col-xxl-9 col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
-									<div id="chartdiv"></div>
+									<div id="chart-vtas-bajas" style="width: 100%;height: 300px;"></div>
 								</div>
 								<div class="col-xxl-3 col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-center px-5">
 									<br />
@@ -129,7 +127,7 @@
 					<div class="card mb-4">
 						<div class="card-header pb-0 text-primary">
 							<i class="fa-regular fa-rectangle-list card_header_icon"></i>
-							<h5 class="text-pr text-primary tncb s6">Comportamiento en las Ventas por Entretenimiento</h5>
+							<h5 class="text-pr text-primary tncb s6">Comportamiento en las Ventas/Aprovisionamiento por Entretenimiento</h5>
 						</div>
 						<div class="card-body p-4">
 							
