--- a/src/main/resources/static/resources/css/date.css
+++ b/src/main/resources/static/resources/css/date.css
@@ -127,7 +127,7 @@
 }
 
 .datepicker-dropdown .table-condensed {
-	width: 15vw;
+	width: 16rem;
 }
 
 .datepicker-dropdown .table-condensed .prev, .datepicker-dropdown .table-condensed .next
