mas grande el calendar

--- a/src/main/resources/static/resources/css/date.css
+++ b/src/main/resources/static/resources/css/date.css
@@ -127,7 +127,8 @@
 }
 
 .datepicker-dropdown .table-condensed {
-	width: 16rem;
+	width: 22rem;
+    height: 18rem;
 }
 
 .datepicker-dropdown .table-condensed .prev, .datepicker-dropdown .table-condensed .next
